<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainListGatt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/navy_blue"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_device_address"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/device_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_state"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/connection_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textSize="18sp" />

        </LinearLayout>





        <ExpandableListView
            android:id="@+id/gatt_services_list"
            android:layout_width="match_parent"
            android:layout_height="13dp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rssi_label"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:text="@string/rssi_label"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rssi_value_display"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ave_rssi_label"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:text="@string/ave_rssi_label"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ave_rssi_value_display"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="20sp" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sample_count_label"
                android:layout_width="349dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/samp_count_label"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sample_count_display"
                android:layout_width="311dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp" />
        </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/force_disconnect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:text="@string/force_disconnect" />

        <Button
            android:id="@+id/time_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

        <TextView
            android:id="@+id/time_textview"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/qr_code_white"
            android:text="TextView" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/um_dearborn_logo" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>