<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--
    android:paddingTop="?attr/actionBarSize">
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/navy_blue"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/um_dearborn_logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:layout_gravity="center"

            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/umichLabel"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/light_grey"
                android:text="@string/UMICH_label"
                android:textColor="@color/black"
                android:textSize="25dp" />



            <EditText
                android:id="@+id/nameInput"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="center"
                android:hint="@string/UMICH_name_hint"
                android:textSize="18dp"
                android:inputType="text" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="center"
                android:hint="@string/UMICH_password_hint"
                android:textSize="18dp"
                android:inputType="text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/incorrectUMIDdisplay"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/register"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/next_button"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/continue_message"
                    android:textSize="20dp"
                    app:strokeColor="@color/colorAccent"
                    app:strokeWidth="150dp" />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>